# humanroot

./: LICENSE  MANIFEST.in  README.md  demo.py  humanroot.db  publish.sh  pyproject.toml  setup.sh
dashboard/: index.html
humanroot/: __init__.py  chain.py  cli.py  crypto.py  delegate.py  models.py
humanroot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
integrations/: __init__.py  anthropic_claude.py  base.py  crewai.py  langchain.py  openai_chat.py
marketing/: outreach.md  producthunt.md  show_hn.md
server/: app.py  db.py  revocation.py  schemas.py
spec/: DRC-SPEC-0.1.md
tests/: test_chain.py  test_crypto.py  test_integrations.py  test_models.py
