[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanroot"
version = "0.1.0"
description = "Delegation Root Certificate for Autonomous Agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agents", "delegation", "authorization", "llm", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=41.0",
    "PyJWT>=2.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn>=0.23"]
dev    = ["pytest>=7.0", "build", "twine"]

[project.urls]
Homepage    = "https://humanroot.dev"
Repository  = "https://github.com/humanroot/humanroot"
Spec        = "https://github.com/humanroot/humanroot/blob/main/spec/DRC-SPEC-0.1.md"

[project.scripts]
humanroot = "humanroot.cli:main"

[tool.setuptools.packages.find]
where    = ["."]
include  = ["humanroot*", "integrations*", "server*"]

[tool.setuptools.package-data]
"*" = ["dashboard/*.html", "spec/*.md"]
